# authentication

./: Cargo.toml  samconfig.toml  template.yaml
argon/: Cargo.toml
argon/src/: main.rs
argon/src/argon/: argon.rs  mod.rs
keyrotator/: Cargo.toml
keyrotator/src/: main.rs
main/: Cargo.toml
main/src/: main.rs
main/src/domain/services/: hasher.rs  manager.rs  mod.rs  paseto.rs
main/src/domain/services/oauth/: client.rs
main/src/domain/types/: error.rs  id.rs  mod.rs  oauthprovider.rs  token.rs  value.rs
shared/: Cargo.toml
shared/src/: argon.rs  lib.rs  paseto.rs
src/: argon-main.rs  main.rs
src/argon/: argon.rs  mod.rs
src/domain/: mod.rs
src/domain/db/: mod.rs  user.rs  verification.rs
src/domain/services/: hasher.rs  mod.rs  table.rs  verification.rs
src/domain/services/manager/: mod.rs
src/domain/services/table/: mod.rs
src/domain/types/: either.rs  email_address.rs  error.rs  id.rs  mail.rs  mod.rs  number.rs  user.rs  uuid.rs  value.rs  verification.rs
src/shared/: mod.rs
