[package]
name = "authentication"
version = "0.1.0"
edition = "2021"


[[bin]]
 name = "main"
 path = "src/main.rs"

 [[bin]]
 name = "argon"
 path = "src/argon-main.rs"
 required-features = ["argon"]


[dependencies]
lettre = { version = "0.11.11", features = ["smtp-transport", "tokio1", "tokio1-native-tls", "serde"] }
aws-sdk-config = { version = "1.54.0", features = ["behavior-version-latest"] }
native-tls = { version = "0.2", features = ["vendored"] }
serde = { version = "1.0.215", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"] }
tokio = { version = "1.42.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
aws-sdk-dynamodb = "1.56.0"
aws-sdk-lambda = "1.62.0"
serde_json = "1.0.133"
lambda_http = "0.14.0"
argon2 = "0.5.3"
bson = "2.13.0"
jwt = "0.16.0"
rand = "0.8.5"
url = "2.5.4"


[features]
argon = []