[package]
name = "keyrotator"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
shared = {path = "../shared"}
lambda_runtime = "0.13.0"
chrono = "0.4.39"
rand = "0.8.5"