[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
lettre = { version = "0.11.11", features = ["smtp-transport", "tokio1", "tokio1-native-tls", "serde"] }
aws-sdk-config = { version = "1.54.0", features = ["behavior-version-latest"] }
aws-config = { version = "1.5.12", features = ["behavior-version-latest"] }
native-tls = { version = "0.2", features = ["vendored"] }
rusty_paseto = { version = "0.7.2", features = ["core"]}
serde = { version = "1.0.215", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"] }
shared = {path = "../shared", features = ["client"]}
tokio = { version = "1.42.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
url = { version = "2.5.4", features = ["serde"]}
aws-sdk-dynamodb = "1.56.0"
aws-sdk-lambda = "1.62.0"
serde_json = "1.0.133"
lambda_http = "0.14.0"
bson = "2.13.0"
jwt = "0.16.0"
rand = "0.8.5"